src/test/ui/c_ffi_const.stderr
error[E0725]: `#[ffi_const]` may only be used on foreign functions
  --> $DIR/ffi_const.rs:5:1
   |
LL | #[ffi_const] //~ ERROR `#[ffi_const]` may only be used on foreign functions [E0725]
   | ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0725`.
